--- a/Main-Project/css/styles.css
+++ b/Main-Project/css/styles.css
@@ -5,53 +5,75 @@ h1,h2,h3,h4,h5,h6{font-family: 'Montserrat Alternates',sans-serif;}
 p,a,li,td{font-family: 'Raleway',"Sans Serif Collection"; font-size: 1.2em;}
 
 /* Main Page Styling */
-header{
-    align-items: center;
-    height: 125px;
-    padding: 5px;
+header {
+    height: auto; 
+    padding: 10px; 
     background-color: #070A0C;
     border: 0.1em solid #C876FF;
     display: flex;
+    justify-content: space-between; 
+    align-items: center; 
 }
-header div{
+
+header div {
     flex-grow: 1;
-    width: auto;
-    height: 105px;
+    overflow: hidden;
 }
- header img{
-    width: auto;
-    height: 240%;
-    margin-left: 5em; 
-    margin-top: -4em;
+
+header img {
+    height: auto; 
+    max-width: 20%; 
+    margin: 0;
+    object-fit: cover;
 }
+
 header menu{
     padding: 0px;
     margin: 0px;
     list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
 }
-header li{
-    padding: 0px 10px;
-    margin-right: 5em;
+
+header li {
+    margin-right: 6em;
+    padding: 1em;
 }
+
 header li a{
     color: #f8f8f8;
     text-decoration: none;
+    font-size: 1em;
     transition: all .25s linear;
-}
-menu{
-    display: flex;
+    white-space: nowrap;
 }
 
-#row-1{
-    height: 520px;
+#row-1 {
+    height: auto; 
     display: grid;
     grid-template-columns: 40% 60%;
     background-image:
         url("../img/background.jpg");
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-position: center; 
+    border: 0.1em solid #C876FF;   
+    text-align: center;
+    padding: 20px; 
+    align-items: center;
+}
+
+#row-1 p{
+    font-size: 3em;
+}
+
+#shopNow{
+    width: 10vw;
+    height: 10vh;
+    font-size: 2em;
+    border-radius: 1em;
     border: 0.1em solid #C876FF;
+    color: #f8f8f8;
+    background-color: #30024f;
 }
 
 #row-1 div:nth-child(1){
@@ -61,40 +83,264 @@ menu{
 }
 
 #row-1 img{
-    width: 50%;
-    height: 100%;
+    max-width: 50%;
+    height: auto;
     margin-left: 20em;
 }
 
-#row-2{
-    height: 520px;
-    border-left: 0.1em solid #C876FF;
-    border-right: 0.1em solid #C876FF;
+#row-2 {
+    height: auto; 
+    display: grid;
     background: rgb(3,0,54);
-    background-image: linear-gradient(to left bottom, #30024f, #2e0349, #2c0443, #2a053d, #270637);
+    background-image: linear-gradient(to left bottom, #53197a, #421662, #32124c, #230d36, #170221);
+    border: 0.1em solid #C876FF;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
 }
 
-#row-3{
-    height: 520px;
-    background:#30024f;
-    border-left: 0.1em solid #C876FF;
-    border-right: 0.1em solid #C876FF;
+#row-2 img{
+    width: auto;
+    height: 100%;
+    margin-left: 5em;
 }
 
-#row-4{
-    height: 500px;
+#large-div1{
+    background-color: rgba(7, 10, 12, 0.4);
+    height: 80vh;
+    width: 45vw;
+    margin: 2em;
+    margin-left: 3.5em;
+    border: 0.1em solid #C876FF;
+    background-image: url("../img/pcsetup2.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+#large-div1 p{
+    margin: 15px 0;
+}
+
+#large-div2{
+    background-color: rgba(7, 10, 12, 0.4);
+    height: 80vh;
+    width: 45vw;
+    margin-top: -25em;
+    border: 0.1em solid #C876FF;
+    background-image: url("../img/pcsetup1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+#small-div1{
+    background-color: rgba(7, 10, 12, 0.8);
+    height: 40vh;
+    width: 45vw;
+    margin-top: 2em;
+    border: 0.1em solid #1BE8F5;
+    display: grid;
+    grid-template-columns: 25% 75%; 
+    text-align: center;
+}
+
+#small-div1 img{
+    width: 200%;
+    height: auto;
+    margin-left: 1em;
+    margin-top: 2em ;
+}
+
+#small-div2{
+    background-color: rgba(7, 10, 12, 0.8);
+    height: 40vh;
+    width: 45vw;
+    margin: 2em;
+    margin-top: -2em;
+    margin-left: 3.5em;
+    border: 0.1em solid #1BE8F5;
+    display: grid;
+    grid-template-columns: 25% 75%; 
+    text-align: center;
+}
+
+#small-div2 img{
+    width: 200%;
+    height: auto;
+    margin-left: 1em;
+    margin-top: 5em ;
+}
+
+#row-3 {
+    height: auto;
+    background: #30024f;
+    border: 0.1em solid #C876FF;
+    display: grid;
+    grid-template-columns: 33% 33% 33%; 
+    align-items: center;
+    text-align: center;
+    padding: 20px; 
+}
+
+#row-3 p{
+    font-size: 2em;
+    margin: 2em;
+    margin-top: 0.5em;
+}
+
+#row-3 h3{
+    font-size: 2em;
+}
+
+#row-4 {
+    height: auto; 
     background-image: url("../img/blue-mountain.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-left: 0.1em solid #C876FF;
-    border-right: 0.1em solid #C876FF;
+    border: 0.1em solid #C876FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10em; 
 }
 
-footer{
-    height: 200px;
+#row-4 div{
+    width: 25vw;
+    height: 20vh;
+    background-color: rgba(237, 120, 219 ,0.5);
+}
+
+#row-4 button{
+    width: 20vw;
+    height: 15vh;
+    font-size: 2em;
+    border: 0.1em solid #f8f8f8;
+    color: #f8f8f8;
+    background-color: rgba(237, 120, 219 ,0.4);
+    margin-top: 0.5em;
+}
+
+/*Footer Styling*/
+footer {
+    height: 20vh; 
     background-color: #070A0C;
     border-bottom: 0.1em solid #C876FF;
     border-left: 0.1em solid #C876FF;
     border-right: 0.1em solid #C876FF;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 30% 50% 10% 10%;
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    padding: 20px; 
+}
+
+footer img{
+    max-width: 50%;
+    height: auto;
+}
+
+footer a{
+    text-decoration: none;
+    color: #f8f8f8;
+}
+
+.socials {
+    display: flex;
+    flex-direction: column;
+    gap: 40px; 
+    margin-top: 40px; 
+}
+
+/*Contact Us Page Styling*/
+#contactFormat {
+    height: auto; 
+    background-image: url("../img/blue-mountain.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-left: 0.1em solid #C876FF;
+    border-right: 0.1em solid #C876FF;
+    padding: 20px; 
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+#contact p{
+    margin-top: 0em;
+    color: #070A0C;
+    font-size: 2em;
+}
+
+#form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#form div{
+    padding-bottom: 2em;
+}
+
+/*About Us Page Styling*/
+#about {
+    height: auto; 
+    background-image: linear-gradient(to left bottom, #53197a, #421662, #32124c, #230d36, #170221);
+    border-left: 0.1em solid #C876FF;
+    border-right: 0.1em solid #C876FF;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 20px; 
+}
+
+#about img{
+    max-width: 80%;
+    height: auto;
+    align-self: center;
+    padding: 5em;
+}
+
+/*Product Page Styling*/
+.product {
+    height: auto; 
+    background-image: linear-gradient(to left bottom, #53197a, #421662, #32124c, #230d36, #170221);
+    border-left: 0.1em solid #C876FF;
+    border-right: 0.1em solid #C876FF;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    align-items: center;
+    padding: 20px; 
+}
+
+.product section {
+    width: 90%; 
+    height: auto; 
+    background-color: rgba(7, 10, 12, 0.8);
+    margin: 20px 0; 
+    padding: 20px; 
+}
+
+#image {
+    text-align: center;
+}
+
+#image img{
+    max-width: 50%;
+    height: auto;
+}
+
+#pcs{
+    display: flex;
+    flex-direction: column;
+    border: 0.1em solid #C876FF;
+}
+
+#imgText{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    margin: 20px;
 }
